<resources>
    <string name="app_name">Calculator</string>

    <string name="action_about">About</string>
    <string name="action_clear_hist">Clear History</string>
    <string name="input_text">Type a problem</string>
    <string name="calc_button">Calculate</string>
    <string name="title_activity_about">About</string>

    <string name="about_text">This app was created by Ben Weinshel</string>

    <!-- Buttons-->
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button_decimal">.</string>
    <string name="button_equals">=</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_times">×</string>
    <string name="button_div">÷</string>
    <string name="button_exp">^</string>
    <string name="button_trig">sin…</string>
    <string name="button_sin">sin(</string>
    <string name="button_cos">cos(</string>
    <string name="button_tan">tan(</string>
    <string name="button_asin">arcsin(</string>
    <string name="button_acos">arccos(</string>
    <string name="button_atan">arctan(</string>
    <string name="button_del">DEL</string>
    <string name="button_lp">(</string>
    <string name="button_rp">)</string>
    <string name="button_right">right</string>
    <string name="button_left">left</string>
    <string name="button_neg">(-)</string>

    <!-- Error Messages-->
    <string name="syntax_error">Syntax error</string>
    <string name="paren_unbalanced">Syntax error: unbalanced parenthesis</string>
    <string name="paren_l_over_r">Syntax error: more ‟(” than ‟)”</string>
    <string name="paren_r_over_l">Syntax error: more ‟)” than ‟(”</string>
    <string name="paren_generic">Parenthesis error</string>
    <string name="insufficient_operators">Syntax error: insufficient operators</string>
    <string name="err_unexpected">Error: unexpected ‟</string>
    <string name="two_consec">Error: two consecutive operators: ‟</string>
    <string name="nothing_to_op">Syntax error: nothing to operate ‟</string>
    <string name="nothing_to_calc">Syntax error: nothing to calclulate ‟</string>
    <string name="unrec_input">Error: unrecognized input</string>
</resources>
