<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <!-- Row 6 -->
    <LinearLayout
        android:id="@+id/row6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/row5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_sin"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button_sin" />

        <Button
            android:id="@+id/button_left"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="leftPressed"
            android:text="@string/button_left" />

        <Button
            android:id="@+id/button_right"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="rightPressed"
            android:text="@string/button_right" />


        <Button
            android:id="@+id/button_del"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="delPressed"
            android:text="@string/button_del" />
    </LinearLayout>

    <!-- Row 5 -->
    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/row4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_lp"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button_lp" />

        <Button
            android:id="@+id/button_rp"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button_rp" />

        <Button
            android:id="@+id/button_exp"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button_exp" />


        <Button
            android:id="@+id/button_div"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button_div" />
    </LinearLayout>

    <!-- 7, 8, 9, and /-->
    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/row3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button9" />


        <Button
            android:id="@+id/button_times"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button_times" />
    </LinearLayout>

    <!-- 4, 5, 6, and *-->
    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/row2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button6" />


        <Button
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button_minus" />
    </LinearLayout>

    <!-- 1, 2, 3, and - -->
    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/row1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button3" />


        <Button
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button_plus" />
    </LinearLayout>

    <!-- ., 0, (-), and = -->
    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_decimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button_decimal" />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button0" />

        <Button
            android:id="@+id/button_neg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/button_neg" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateResult"
            android:text="@string/button_equals" />


    </LinearLayout>

</RelativeLayout>